@@ -6,15 +6,15 @@ AUX newrelic_rpm-2.12.3-less-stdout.patch 1314 RMD160 f3296bc55471a3989a996b12f5
 AUX newrelic_rpm-2.9.9-no-webrick.patch 768 RMD160 5b98cc31b9c10a5ff736450c24731271da5f7ad0 SHA1 a450a3e6e3031ddb48f47aaa894a8d5c440da79e SHA256 757967a408b76510e545cdb1f4ae9b232d0e44c61645ceae465150b52fb859d9
 DIST newrelic_rpm-2.10.8.gem 471040 RMD160 0a00bd19161310bd181a938c206f5f5d4c192614 SHA1 257e961b880feef91b3ee81ee1b5714d52e13142 SHA256 804e6cec7adc6b6e12e979851eeef18c5a8ca67957e539131ef3832dc500829b
 DIST newrelic_rpm-2.12.3.gem 324608 RMD160 54616a03cfe2e38a83cc8e3b3ac30845d9e3ba4c SHA1 692959b0d6876cb7a0e1431e47025a7f9a862078 SHA256 c39e56ef57fa86153504ad79d838772753756eb72116081700fdab17cd6b33cf
-EBUILD newrelic_rpm-2.10.8-r1.ebuild 735 RMD160 a1ee0ece5091ad5ee376bbcddab39ac44726e3c7 SHA1 8f509ae0ae64d8829fc144f822cb182696f01760 SHA256 7441f7e8c9b5495732bc4cd3784792f352d499e63e84a64d4c67684e66cda401
-EBUILD newrelic_rpm-2.12.3-r1.ebuild 773 RMD160 bb89e56e735f4ee04487f9d18561890635a2d73d SHA1 41e008a22f7ea0e022122b20e4de4ac58e12980c SHA256 be0af0444f1cf1b7126a2a09791797d41ff74dada2dbf5a53fbfbcfd9ccbe1ec
-EBUILD newrelic_rpm-2.12.3.ebuild 748 RMD160 2273e96c59772db503453d1d53ebacbb85806ea1 SHA1 ce4817af377d8cdee441c28ccd3af74a7b70b44d SHA256 cd66df8e2509163201d5b2e43219380e5597a260e963b0608dc276bc46f720e0
-MISC ChangeLog 1741 RMD160 dd2338cc3059ebad3a6e35b050dc780cc22e957c SHA1 b227fc753038315228fc7b637fa30c5e9c2addc4 SHA256 901fecffa840eb08e54ef405e6b6ca501c4a2264361f1fcdea5e1d5317e4f875
+EBUILD newrelic_rpm-2.10.8-r1.ebuild 746 RMD160 fb260521702ea9870af1c5a0460b1533a77e413d SHA1 4854d331f77cd4d2c61b3b4c0d9bd15d3aa81442 SHA256 ed3be75f320eb924a2abb83e1aadf3ba3ef4e61d3fbd6712b3c80fcc3491b185
+EBUILD newrelic_rpm-2.12.3-r1.ebuild 784 RMD160 b99cd5dc094a5a08e9c9c80740d57060a5038e96 SHA1 3c5371eac50ccca62c364528897b43356738837c SHA256 87a771fe16f5273afe38e3699a0137855449e899331eb8179ad2be15e71a740b
+EBUILD newrelic_rpm-2.12.3.ebuild 759 RMD160 1935e306a3e3336e8ad244a1cfede445772b69e1 SHA1 68efc5ae947350587989a1db2cae9c2f0ba8a8cc SHA256 8e820927728e5afc358deb90d71d31da0c24af385cb2900a555f07cafe18739a
+MISC ChangeLog 1908 RMD160 e2549b1b66667cc03575d3a06a9f45471eac4a56 SHA1 e70917a5937e66742912177889a48fe93ae5686d SHA256 ce299d638601965683fad7a757eab10065647a05aee0221df33760a7b4a4ae54
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkxhP5kACgkQZihJkut28SuHEgD/YHjuUl9NYZl9itzIvyMNOz+M
-Fnhvo1gmkHwj+HmNXJEA+wT1dJWF10HutqL7NNsKzgP0nbts7fqQrSUkdGzUE+gL
-=hxQt
+iF4EAREIAAYFAk0m9iUACgkQrnu0mw69Jkr64QD6Al0p8r2RWLErbLy/DTYHkU1b
+iccG+3titWuIh44vAO8BAIFuPOV0QiXWFr0x2vQ7V/Ab83CJUiwED5HiIwvoLJZa
+=hdvG
 -----END PGP SIGNATURE-----
