@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/newrelic_rpm
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 Jan 2011; Hans de Graaff <graaff@gentoo.org>
+  newrelic_rpm-2.10.8-r1.ebuild, newrelic_rpm-2.12.3.ebuild,
+  newrelic_rpm-2.12.3-r1.ebuild:
+  Keyword ~x86-macos.
 
   10 Aug 2010; Hans de Graaff <graaff@gentoo.org>
   files/newrelic_rpm-2.12.3-less-stdout.patch:
